--- a/BARÇA.html
+++ b/BARÇA.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1 class="titulo">MUNDO FUTBOL</h1>
-            <img class="logo"src="logo.jpg" alt="logo">
+            <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
                     <li>
@@ -37,7 +37,7 @@
                 <h1>History the Barcelona</h1>
                 <figure>
                     <img
-                        src="shieldbarça.png"
+                        src="IMAGENES/shieldbarça.png"
                         width="400"
                         height="200"
                         alt="shieldbarça">
@@ -55,7 +55,7 @@
                 </p>
                 <figure class="foto1">
                     <img
-                        src="sextete.jpg"
+                        src="IMAGENES/sextete.jpg"
                         width="800"
                         height="500"
                         alt="sextete"
@@ -64,7 +64,7 @@
                 </figure>
                 <figure class="foto1">
                     <img
-                        src="sextete2.jpg"
+                        src="IMAGENES/sextete2.jpg"
                         width="800"
                         height="500"
                         alt="sextete"
@@ -86,7 +86,7 @@
                         A campaign that closed with the last league game in which Barcelona tied with Deportivo and closed the standings with a total of 87 points, against 78 for Real Madrid, the second classified.
                     <figure class="foto3">
                         <img
-                    src="tripleteGuardiola.jpg"
+                    src="IMAGENES/tripleteGuardiola.jpg"
                     width="400"
                     height="200"
                     alt="sextete"
@@ -103,7 +103,7 @@
                         The same result was repeated in the Champions League final, which was the competition that closed the season. Juventus fell 1-3 to Barcelona in the final in Berlin. Before, in the quarterfinals they had been charged with PSG, while in the semifinals it was Bayern Munich who were eliminated.
                         <figure class="foto4">
                         <img
-                    src="tripleteluisenrique.jpg"
+                    src="IMAGENES/tripleteluisenrique.jpg"
                     width="400"
                     height="200"
                     alt="sextete"
