--- a/EUROLIGA.html
+++ b/EUROLIGA.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>MUNDO FUTBOL</h1>
-            <img src="logo.jpg" alt="logo">
+            <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
                     <li>
@@ -48,7 +48,7 @@
                     Only four franchises have competed in all 17 seasons. They are Barcelona, ​​Olympiacos, Baskonia and Zálgiris Kaunas, the most faithful participants in the best European league. With two more appearances, the Catalans will become the first team to reach 400 (!) Matches, followed by Olympiacos, CSKA Moscow and seven other teams that have more than 300 participations in the highest event in European basketball. at the club level.
                     <figure>
                         <img
-                            src="clasificacion.png"
+                            src="IMAGENES/clasificacion.png"
                             width="600"
                             height="300"
                             alt="clasification"
@@ -76,7 +76,7 @@
                     </p>
                     <figure>
                         <img
-                            src="titulo.jpeg"
+                            src="IMAGENES/titulo.jpeg"
                             width="600"
                             height="300"
                             alt="clasification"
