--- a/NBA.html
+++ b/NBA.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>MUNDO FUTBOL</h1>
-            <img src="logo.jpg" alt="logo">
+            <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
                     <li>
@@ -55,7 +55,7 @@ Miller, who knows his stuff about shooting and amassed 25,279 points in his care
                 </p>
                 <figure>
                     <img
-                        src="curry.jpeg"
+                        src="IMAGENES/curry.jpeg"
                         width="400"
                         height="200"
                         alt="curry"
@@ -77,7 +77,7 @@ Miller, who knows his stuff about shooting and amassed 25,279 points in his care
                 </p>
                 <figure>
                     <img
-                        src="luka.jpg"
+                        src="IMAGENES/luka.jpg"
                         width="400"
                         height="200"
                         alt="luka"
@@ -102,7 +102,7 @@ Miller, who knows his stuff about shooting and amassed 25,279 points in his care
                 </p>
                 <figure>
                     <img
-                        src="anteto.jpeg"
+                        src="IMAGENES/anteto.jpeg"
                         width="400"
                         height="200"
                         alt="luka"
