--- a/FUTBOL INTERNACIONAL.html
+++ b/FUTBOL INTERNACIONAL.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>MUNDO FUTBOL</h1>
-            <img src="logo.jpg" alt="logo">
+            <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
                     <li>
@@ -36,7 +36,7 @@
             <section>
                 <figure>
                     <img
-                        src="shield1.png"
+                        src="IMAGENES/shield1.png"
                         width="400"
                         height="200"
                         alt="shield"
@@ -104,7 +104,7 @@
                 <section>
                     <figure>
                         <img
-                            src="shield2.png"
+                            src="IMAGENES/shield2.png"
                             width="400"
                             height="200"
                             alt="shield"
