--- a/LIGA-SANTANDER.html
+++ b/LIGA-SANTANDER.html
@@ -49,15 +49,16 @@
 
                     In addition, in the 'top 20' of this historical classification, the impressive current level of LaLiga Smartbank stands out. Almost half of the teams (eight in total) currently play in Segunda or Segunda B (Deportivo de la Coruña and Racing de Santander).
                 </p>
-                <img
-                    src="liga santander.jpg"
-                    width="400"
-                    height="200"
-                    alt="ligasantander"
-                >
-                <figcaption>
-                    <h3>The league Santander</h3>
-                </figcaption>
+                <figure>
+                    <img src="IMAGENES/santander.png"
+                     width="400"
+                        height="200"
+                        alt="santander"
+                        >
+                    <figcaption>
+                        <h3>The league Santander</h3>
+                    </figcaption>
+                </figure>
             </section>
             <section>
                 <h2>Records the league spanish</h2>
@@ -120,15 +121,17 @@
                     
                     Most points in one season: Real Madrid (2011-2012) and Barcelona (2012-2013) 100
                 </p>
-                <img
-                    src="records.jpg"
-                    width="400"
-                    height="200"
-                    alt="records"
-                >
-                <figcaption>
-                    <h3>Records the league spanish</h3>
-                </figcaption>
+                <figure>
+                    <img
+                        src="IMAGENES/records.jpg"
+                        width="400"
+                        height="200"
+                        alt="records"
+                    >
+                    <figcaption>
+                        <h3>Records the league spanish</h3>
+                    </figcaption>
+                </figure>
             </section>
             <section>
                 <h2>Luis Enrique's triplet</h2>
@@ -162,30 +165,30 @@ No. Country Awards
 4 Flag of Uruguay.svg Uruguay 6
 5 Flag of Portugal Portugal 4
                 </p>
-                <img
-                    src="trofeolaliga.jpeg"
-                    width="400"
-                    height="200"
-                    alt="sextete"
-                >
-                <figcaption>
-                    <h3>Top scorer</h3>
-                </figcaption>
+                <figure>
+                    <img
+                        src="IMAGENES/trofeolaliga.jpeg"
+                        width="400"
+                        height="200"
+                        alt="sextete"
+                    >
+                    <figcaption>
+                        <h3>Top scorer</h3>
+                    </figcaption>
+                </figure>
             </section>
         </main>
         <footer>
             <p>
-                <a href="https://es-es.facebook.com/">
-                    Facebook
+                <a href="https://es-es.facebook.com/">Facebook</a>
+                <p>
+                    <a href="https://www.instagram.com/?hl=es">Instagram</a>
                     <p>
-                        <a href="https://www.instagram.com/?hl=es">
-                            Instagram
-                            <p>
-                                <a href="https://twitter.com/?lang=es">
-                                    Twitter
-                                    <hr>
-                                    <a href="CONTACTO.html">INFORMATION THE CONTACT</a>
-                                    <p>2021 Copyright</p>
-                                </footer>
-                            </body>
-                        </html>
+                        <a href="https://twitter.com/?lang=es">Twitter</a>
+                    </p>
+                    <hr>
+                    <a href="CONTACTO.html">INFORMATION THE CONTACT</a>
+                    <p>2021 Copyright</p>
+                </footer>
+            </body>
+        </html>
