--- a/CONTACTO.html
+++ b/CONTACTO.html
@@ -36,7 +36,7 @@
             <article>
                 <h2>Quisieras trabajar con nosotros? Rellena los datos que hay a continuacion</h2>
                 <form>
-                    <fieldset>
+                    <fieldset class="formulario">
                         <legend>Information for you</legend>
                         <p>
                             <label for="name">
@@ -103,7 +103,7 @@
                             <input type="text" id="others" name="other">
                         </p>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="formulario2">
                         <legend>Important information</legend>
                         <p>
                             <label>Languages you speak:</label>
