--- a/FUTBOL-INTERNACIONAL.html
+++ b/FUTBOL-INTERNACIONAL.html
@@ -34,7 +34,7 @@
         </header>
         <main>
             <section>
-                <figure>
+                <figure class="fotointer1">
                     <img
                         src="IMAGENES/shield1.png"
                         width="400"
@@ -43,7 +43,7 @@
                     >
                 </figure>
                 <h2>Clasification league premier league</h2>
-                <table>
+                <table class="tabla1">
                     <caption>Clasification history</caption>
                     <tr>
                         <th>Winners</th>
@@ -102,8 +102,8 @@
                     </table>
                 </section>
                 <section>
-                    <figure>
-                        <img
+                    <figure class="fotointer2">
+                        <img 
                             src="IMAGENES/shield2.png"
                             width="400"
                             height="200"
@@ -111,7 +111,7 @@
                         >
                     </figure>
                     <h2>Clasification league Bundesliga</h2>
-                    <table>
+                    <table class="tabla2">
                         <caption>Clasification history</caption>
                         <tr>
                             <th>Winners</th>
