--- a/LIGA-SANTANDER.html
+++ b/LIGA-SANTANDER.html
@@ -33,7 +33,7 @@
             </nav>
         </header>
         <main>
-            <section>
+            <section class="santander1">
                 <h2>The historical classification of LaLiga: the battle to be the best of all time</h2>
                 <p>
                     Within this list are all the teams that have ever played in the First Division. From the first competitors back in February 1929 to the latest incorporations. None are missing.
@@ -49,7 +49,7 @@
 
                     In addition, in the 'top 20' of this historical classification, the impressive current level of LaLiga Smartbank stands out. Almost half of the teams (eight in total) currently play in Segunda or Segunda B (Deportivo de la Coruña and Racing de Santander).
                 </p>
-                <figure>
+                <figure class="fotosantander1">
                     <img src="IMAGENES/santander.png"
                      width="400"
                         height="200"
@@ -60,7 +60,7 @@
                     </figcaption>
                 </figure>
             </section>
-            <section>
+            <section class="santander2">
                 <h2>Records the league spanish</h2>
                 <p>
                     PLAYERS
@@ -121,7 +121,7 @@
                     
                     Most points in one season: Real Madrid (2011-2012) and Barcelona (2012-2013) 100
                 </p>
-                <figure>
+                <figure class="fotosantander1">
                     <img
                         src="IMAGENES/records.jpg"
                         width="400"
@@ -133,7 +133,7 @@
                     </figcaption>
                 </figure>
             </section>
-            <section>
+            <section class="santander3">
                 <h2>Luis Enrique's triplet</h2>
                 <p>
                     The Santander Awards, formerly BBVA, are official awards granted by the Professional Football League and Banco Santander as the maximum sponsor of the Spanish league, which recognize the best players and coaches of the First and Second Division each month.
@@ -165,7 +165,7 @@ No. Country Awards
 4 Flag of Uruguay.svg Uruguay 6
 5 Flag of Portugal Portugal 4
                 </p>
-                <figure>
+                <figure class="fotosantander1">
                     <img
                         src="IMAGENES/trofeolaliga.jpeg"
                         width="400"
