PROJECTE PAGINA WEB

--- a/EUROLIGA.html
+++ b/EUROLIGA.html
@@ -32,8 +32,8 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            <article>
+        <main class="euroliga">
+            <article class="euroliga1">
                 <h2>Top 10 teams in the modern era of the Euroleague</h2>
                 <h3>It has been 17 seasons since the first EuroLeague jump between two in its modern era, and Eurohoops highlights the best teams in the competition based on a special ranking, while presenting their most important achievements in the tournament through graphics, numbers and statistics.</h3>
                 <p>
@@ -58,7 +58,7 @@
                         </figcaption>
                     </figure>
                 </article>
-                <article>
+                <article class="euroliga2">
                     <h2>This is how Barça did in their previous Euroleague finals.</h2>
                     <h3>The azulgrana team has played seven finals of the highest continental competition and has won the last two they have played</h3>
                     <p>
