--- a/NBA.html
+++ b/NBA.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>MUNDO FUTBOL</h1>
+            <h1><a href="index.html">MUNDO FUTBOL</a></h1>
             <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
@@ -32,8 +32,8 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            <article>
+        <main class="parrafon">
+            <article class="parrafon1">
                 <h2>The greatness of being called Steph Curry, the greatest shooter of all time.</h2>
                 <h3>
                     The point guard of the Golden State Warriors is the leading scorer in the history of the franchise, but his impact on the game goes far beyond the titles, awards and accumulated records.
@@ -53,7 +53,7 @@ Miller, who knows his stuff about shooting and amassed 25,279 points in his care
 
 “Steph is a lot like Wilt, Shaq, Jordan or Iverson. They have changed things, they have changed how basketball is perceived and played ”, concludes the former Indiana Pacers player. They agree with him, too, two other giants like Jerry West and Dirk Nowitzki. "I think he is probably number one, yes," corroborates the German.
                 </p>
-                <figure>
+                <figure class="nba1">
                     <img
                         src="IMAGENES/curry.jpeg"
                         width="400"
@@ -65,7 +65,7 @@ Miller, who knows his stuff about shooting and amassed 25,279 points in his care
                     </figcaption>
                 </figure>
             </article>
-            <article>
+            <article class="parrafon2">
                 <h2>Luka Doncic's latest madness in the NBA: basket against Boston Celtics to silence criticism</h2>
                 <h3>El esloveno sacó un triplazo sobre la bocina para tumbar a Boston Celtics. Luka Doncic, tras un inicio dubitativo, ya está de vuelta.</h3>
                 <p>
@@ -75,7 +75,7 @@ Miller, who knows his stuff about shooting and amassed 25,279 points in his care
     
     Josh Richardson could not do more than observe how Doncic, in just 10 seconds of play, had managed to avoid three blocks and score the triple of the victory. He, calm, received the ovation of his companions after the play made.
                 </p>
-                <figure>
+                <figure class="nba1">
                     <img
                         src="IMAGENES/luka.jpg"
                         width="400"
@@ -87,7 +87,7 @@ Miller, who knows his stuff about shooting and amassed 25,279 points in his care
                     </figcaption>
                 </figure>
             </article>
-            <article>
+            <article class="parrafon3">
                 <h2>Giannis Antetokounmpo wins his second consecutive MVP</h2>
                 <h3>The Greek star, who is in his country after the end of the season, does not want to be called MVP until he has his Ring</h3>
                 <p>
@@ -100,7 +100,7 @@ Miller, who knows his stuff about shooting and amassed 25,279 points in his care
                     
                     'The Greek Freak' has become the third player in history to achieve MVP and DPOY (Defensive Player of the Year) after two other NBA legends: Michael Jordan and Hakeem Olajuwon. He also joins a select club of players who have repeated MVPs consecutively, along with Tim Duncan (2002 and 2003), Steve Nash (2005 and 2006), LeBron James (2009 and 2010, 2012 and 2013) and Stephen Curry ( 2015 and 2016).
                 </p>
-                <figure>
+                <figure class="nba1">
                     <img
                         src="IMAGENES/anteto.jpeg"
                         width="400"
