PROJECTE PAGINA WEB

--- a/BARÇA.html
+++ b/BARÇA.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1 class="titulo">MUNDO FUTBOL</h1>
+            <h1><a href="index.html">MUNDO FUTBOL</a></h1>
             <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
