--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <a href="BARCA.html"></a>
+    <a href="LIGA-SANTANDER.html"></a>
+    <a href="FUTBOL-INTERNACIONAL.html"></a>
+    <a href="NBA.html"></a>
+    <a href="EUROLIGA.html"></a>
+    <a href="CONTACTO.html"></a>
+
+
 <meta charset="UTF-8">
 </head>
 <body>
