"PROJECTE PAGINA WEB"

--- a/BARCA.html
+++ b/BARCA.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <header>
-            <h1><a href="index.html">MUNDO FUTBOL</a></h1>
+            <h1>MUNDO FUTBOL</h1>
             <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
                     <li>
-                        <a href="BARÇA.html">BARÇA</a>
+                        <a href="BARCA.html">BARÇA</a>
                     </li>
                     <li>
                         <a href="LIGA-SANTANDER.html">LIGA SANTANDER</a>
@@ -72,7 +72,7 @@
                     <h3>The trophies of the sextete</h3>
                 </figure>
             </article>
-            <aside>
+            <aside class="noticias2">
                 <h1>
                     Barça, the only Spanish football club that knows how to win triplets and sextets
                 </h1>
@@ -101,7 +101,7 @@
                         The League was succeeded this time by the title of champion of the Copa del Rey. Again the other finalist was Athletic Club, which ended up losing 1-3.
     
                         The same result was repeated in the Champions League final, which was the competition that closed the season. Juventus fell 1-3 to Barcelona in the final in Berlin. Before, in the quarterfinals they had been charged with PSG, while in the semifinals it was Bayern Munich who were eliminated.
-                        <figure class="foto4">
+                        <figure class="foto3">
                         <img
                     src="IMAGENES/tripleteluisenrique.jpg"
                     width="400"
