--- a/EUROLIGA.html
+++ b/EUROLIGA.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="BARÇA.html">BARÇA</a>
+                        <a href="BARCA.html">BARÇA</a>
                     </li>
                     <li>
                         <a href="LIGA-SANTANDER.html">LIGA SANTANDER</a>
@@ -46,7 +46,7 @@
                     The number of teams that have participated in the modern era of the Euroleague amounts to 83 (19 different countries), while 2,700 players have graced the tournament with their presence.
                     
                     Only four franchises have competed in all 17 seasons. They are Barcelona, ​​Olympiacos, Baskonia and Zálgiris Kaunas, the most faithful participants in the best European league. With two more appearances, the Catalans will become the first team to reach 400 (!) Matches, followed by Olympiacos, CSKA Moscow and seven other teams that have more than 300 participations in the highest event in European basketball. at the club level.
-                    <figure>
+                    <figure class="euroligafoto">
                         <img
                             src="IMAGENES/clasificacion.png"
                             width="600"
@@ -74,7 +74,7 @@
     
     Here we leave you a review of the 7 Barça finals and, this time, we can tell you that the Catalans have saved the best for last
                     </p>
-                    <figure>
+                    <figure class="euroligafoto">
                         <img
                             src="IMAGENES/titulo.jpeg"
                             width="600"
