--- a/LIGA-SANTANDER.html
+++ b/LIGA-SANTANDER.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <header>
-            <h1>MUNDO FUTBOL</h1>
+            <h1>>MUNDO FUTBOL</h1>
             <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
                     <li>
-                        <a href="BARÇA.html">BARÇA</a>
+                        <a href="BARCA.html">BARÇA</a>
                     </li>
                     <li>
                         <a href="LIGA-SANTANDER.html">LIGA SANTANDER</a>
