--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta charset="UTF-8">
 </head>
 <body>
-<p>Hola mon
+<p>Benvinguts a la pagina de Deports de Aitor Company espere que vos agrade i a disfrutar.
     
 </p>
 </body>
