--- a/FUTBOL-INTERNACIONAL.html
+++ b/FUTBOL-INTERNACIONAL.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="BARÇA.html">BARÇA</a>
+                        <a href="BARCA.html">BARÇA</a>
                     </li>
                     <li>
                         <a href="LIGA-SANTANDER.html">LIGA SANTANDER</a>
