Projecte Pagina Web de deportes

--- a/BARCA.html
+++ b/BARCA.html
@@ -112,17 +112,15 @@
                 <h3>Trophies of the triplet Luis Enrique</h3>
             </aside>
         </main>
-        <footer>
-            <p>
-                <a href="https://es-es.facebook.com/">Facebook</a>
-                <p>
+        <footer class="iconos">
+            <p class="iconos1">
+                <a  href="https://es-es.facebook.com/">Facebook</a>
+                <p class="iconos">
                     <a href="https://www.instagram.com/?hl=es">Instagram</a>
-                    <p>
                         <a href="https://twitter.com/?lang=es">Twitter</a>
-                    </p>
                     <hr>
                     <a href="CONTACTO.html">INFORMATION THE CONTACT</a>
-                    <p>2021 Copyright</p>
+                    <p>2022 Copyright</p>
                 </footer>
             </body>
         </html>
