fixing index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
     <a href="BARCA.html"></a>
     <a href="LIGA-SANTANDER.html"></a>
     <a href="FUTBOL-INTERNACIONAL.html"></a>
@@ -10,7 +10,7 @@
 
 
 <meta charset="UTF-8">
-</head>
+</header>
 <body>
 <p>Benvinguts a la pagina de Deports de Aitor Company espere que vos agrade i a disfrutar.
     
