--- a/NBA.html
+++ b/NBA.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <header>
-            <h1>>MUNDO FUTBOL</h1>
-            <img class="logo"src="IMAGENES/logo.jpg" alt="logo">
+            <h1>MUNDO FUTBOL</h1>
+            <img class="logo" src="IMAGENES/logo.jpg" alt="logo">
             <nav>
                 <ul>
                     <li>
